scss/modules/_header.scss
.header {
  display: flex;
  justify-content: space-between;
  padding: 7px 30px;
  background-color: steelblue;
  color: #fff;
}

.title {
  margin: 0;
  margin-left: -2rem;
  font-weight: 300;
  font-size: 110%;
  letter-spacing: 1.5px;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);

  @include atSmall {
    margin-left: 0;
    text-align: center;
    font-size: 140%;
  }

  @include atMedium {
    font-size: 170%;
  }
}

.streak {
  margin: 0;
  margin-right: -2rem;
  font-weight: 300;
  font-size: 110%;
  letter-spacing: 1.5px;

  @include atSmall {
    font-size: 140%;
    letter-spacing: 2px;
    font-weight: 300;
  }

  @include atMedium {
    margin-right: 0;
    font-size: 170%;
  }
}

